--- a/src/configure.in
+++ b/src/configure.in
@@ -125,6 +125,21 @@ AC_MSG_RESULT("k5crypto will use \'$withval\'")
 ], withval=builtin)
 AC_CONFIG_COMMANDS(CRYPTO_IMPL, , CRYPTO_IMPL=$CRYPTO_IMPL)
 AC_SUBST(CRYPTO_IMPL)
+if test "$withval" = openssl; then
+	AC_DEFINE(OPENSSL,1,[Define if OpenSSL crypto implementation is selected])
+fi
+
+PRNG_ALG="yarrow"
+AC_ARG_WITH([prng-alg],
+AC_HELP_STRING([--with-prng-alg=ALG], [use specified PRNG algorithm @<:@yarrow@:>@]),
+[PRNG_ALG=$withval
+AC_MSG_RESULT("k5crypto will use \'$withval\'")
+], withval=yarrow)
+AC_CONFIG_COMMANDS(PRNG_ALG, , PRNG_ALG=$PRNG_ALG)
+AC_SUBST(PRNG_ALG)
+if test "$withval" = fortuna; then
+	AC_DEFINE(FORTUNA,1,[Define if Fortuna PRNG is selected])
+fi
 
 # --with-kdc-kdb-update makes the KDC update the database with last request
 # information and failure information.
@@ -1082,8 +1097,12 @@ V5_AC_OUTPUT_MAKEFILE(.
 	lib/crypto/$CRYPTO_IMPL/hash_provider lib/crypto/krb/checksum
 	lib/crypto/krb/prf lib/crypto/krb/rand2key
 	lib/crypto/$CRYPTO_IMPL lib/crypto/$CRYPTO_IMPL/md4 lib/crypto/$CRYPTO_IMPL/md5
-	lib/crypto/krb/old lib/crypto/krb/raw lib/crypto/$CRYPTO_IMPL/sha1
-	lib/crypto/krb/arcfour lib/crypto/krb/yarrow lib/crypto/$CRYPTO_IMPL/aes
+	lib/crypto/krb/old lib/crypto/krb/raw
+	lib/crypto/$CRYPTO_IMPL/sha1
+	lib/crypto/$CRYPTO_IMPL/sha2
+	lib/crypto/krb/arcfour lib/crypto/krb/prng
+	lib/crypto/krb/prng/$PRNG_ALG
+	lib/crypto/$CRYPTO_IMPL/aes
 	lib/crypto/$CRYPTO_IMPL/camellia lib/crypto/crypto_tests
 
 	lib/krb5 lib/krb5/error_tables lib/krb5/asn.1 lib/krb5/ccache
