--- a/src/lib/crypto/builtin/Makefile.in
+++ b/src/lib/crypto/builtin/Makefile.in
@@ -1,12 +1,13 @@
 mydir=lib/crypto/builtin
 BUILDTOP=$(REL)..$(S)..$(S)..
-SUBDIRS=camellia des aes md4 md5 sha1 enc_provider hash_provider
+SUBDIRS=camellia des aes md4 md5 sha1 sha2 enc_provider hash_provider
 LOCALINCLUDES = -I$(srcdir)/../krb 			\
 		-I$(srcdir)/../krb/hash_provider 	\
 		-I$(srcdir)/des 	\
 		-I$(srcdir)/aes 	\
 		-I$(srcdir)/camellia 	\
 		-I$(srcdir)/sha1 	\
+		-I$(srcdir)/sha2 	\
 		-I$(srcdir)/md4 	\
 		-I$(srcdir)/md5	\
 		-I$(srcdir)/enc_provider	\
@@ -38,7 +39,8 @@ SRCS=\
 	$(srcdir)/pbkdf2.c	
 
 STOBJLISTS= des/OBJS.ST md4/OBJS.ST 	\
-	md5/OBJS.ST sha1/OBJS.ST 	\
+	md5/OBJS.ST 			\
+	sha1/OBJS.ST  sha2/OBJS.ST  	\
 	enc_provider/OBJS.ST 		\
 	hash_provider/OBJS.ST 		\
 	aes/OBJS.ST 			\
@@ -46,7 +48,8 @@ STOBJLISTS= des/OBJS.ST md4/OBJS.ST 	\
 	OBJS.ST
 
 SUBDIROBJLISTS= des/OBJS.ST md4/OBJS.ST 	\
-		md5/OBJS.ST sha1/OBJS.ST 	\
+		sha1/OBJS.ST  sha2/OBJS.ST 	\
+		md5/OBJS.ST  			\
 		enc_provider/OBJS.ST 		\
 		hash_provider/OBJS.ST 		\
 		aes/OBJS.ST			\
