When NSS is the crypto implementation, use the NSS PRNG.  Avoids the issue that Yarrow's entropy pools would be invalidated by a fork.
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/nss@24349 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/configure.in
+++ b/src/configure.in
@@ -134,6 +134,7 @@ openssl)
 nss)
   CRYPTO_IMPL_CFLAGS=`pkg-config --cflags nss`
   CRYPTO_IMPL_LIBS="-lnss3 $(pkg-config --libs nss-util)"
+  AC_DEFINE(CRYPTO_IMPL_NSS,1,[Define if crypto implementation is NSS])
   ;;
 *)
   AC_MSG_ERROR([Unknown crypto implementation $withval])
