ticket: 6791 subject: kadm5_hook: new plugin interface
Implement http://k5wiki.kerberos.org/wiki/Projects/Kadmin_hook_interface

This provides an interface that allows a plugin to track kadmin
operations. This can be used for projects like the krb5-sync project.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24375 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/kadm5/srv/Makefile.in
+++ b/src/lib/kadm5/srv/Makefile.in
@@ -28,6 +28,7 @@ SHLIB_RDIRS=$(KRB5_LIBDIR)
 RELDIR=kadm5/srv
 
 SRCS =	$(srcdir)/pwqual.c \
+	$(srcdir)/kadm5_hook.c \
 	$(srcdir)/pwqual_dict.c \
 	$(srcdir)/pwqual_empty.c \
 	$(srcdir)/pwqual_hesiod.c \
@@ -47,6 +48,7 @@ OBJS =	pwqual.$(OBJEXT) \
 	pwqual_empty.$(OBJEXT) \
 	pwqual_hesiod.$(OBJEXT) \
 	pwqual_princ.$(OBJEXT) \
+	kadm5_hook.$(OBJEXT) \
 	svr_policy.$(OBJEXT) \
 	svr_principal.$(OBJEXT) \
 	server_acl.$(OBJEXT) \
@@ -63,6 +65,7 @@ STLIBOBJS = \
 	pwqual_empty.o \
 	pwqual_hesiod.o \
 	pwqual_princ.o \
+	kadm5_hook.o \
 	svr_policy.o \
 	svr_principal.o \
 	server_acl.o \
