make depend Add kadm5_hook test plugin to toplevel Makefile.in
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24377 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -9,6 +9,7 @@ mydir=.
 #	plugins/authdata/greet
 SUBDIRS=util include lib \
 	@ldap_plugin_dir@ \
+	plugins/kadm5_hook/test \
 	plugins/kdb/db2 \
 	plugins/preauth/pkinit \
 	plugins/preauth/encrypted_challenge \
