Make test cleaner
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/fortuna@24396 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/krb/prng/fortuna/Makefile.in
+++ b/src/lib/crypto/krb/prng/fortuna/Makefile.in
@@ -43,7 +43,7 @@ else
 endif
 
 clean::
-	$(RM) t_fortuna$(EXEEXT) t_fortuna.$(OBJEXT)
+	$(RM) t_fortuna$(EXEEXT) t_fortuna.$(OBJEXT)  t_fortuna_make_oct.result  t_fortuna_make_oct$(EXEEXT)  t_fortuna_make_oct.$(OBJEXT)
 
 
 clean-unix:: clean-libobjs
