--- a/src/configure.in
+++ b/src/configure.in
@@ -1116,6 +1116,7 @@ dnl	ccapi ccapi/lib ccapi/lib/unix ccapi/server ccapi/server/unix ccapi/test
 	plugins/kdb/db2/libdb2/test
 	plugins/kdb/hdb
 	plugins/preauth/cksum_body plugins/preauth/encrypted_challenge
+	plugins/preauth/securid_sam2
 	plugins/preauth/wpse
 	plugins/authdata/greet
 	plugins/authdata/greet_client
