--- a/src/configure.in
+++ b/src/configure.in
@@ -145,6 +145,31 @@ AC_SUBST(CRYPTO_IMPL)
 AC_SUBST(CRYPTO_IMPL_CFLAGS)
 AC_SUBST(CRYPTO_IMPL_LIBS)
 
+if test "$CRYPTO_IMPL" = nss; then
+	PRNG_ALG="nss"
+else
+PRNG_ALG="yarrow"
+AC_ARG_WITH([prng-alg],
+AC_HELP_STRING([--with-prng-alg=ALG], [use specified PRNG algorithm. Ignored for nss. @<:@yarrow@:>@]),
+[PRNG_ALG=$withval
+AC_MSG_RESULT("k5crypto will use \'$withval\'")
+], withval=yarrow)
+fi
+AC_CONFIG_COMMANDS(PRNG_ALG, , PRNG_ALG=$PRNG_ALG)
+AC_SUBST(PRNG_ALG)
+if test "$withval" = fortuna; then
+	AC_DEFINE(FORTUNA,1,[Define if Fortuna PRNG is selected])
+fi
+
+AC_ARG_ENABLE([fortuna-test],
+	[  --enable-fortuna-test  build to test Fortuna PRNG],,enableval=no)
+if test "$enableval" = yes ; then
+	PRNG_FORTUNA_TEST="yes"
+	AC_DEFINE(TEST_FORTUNA,1,[Create a special build to test Fortuna PRNG])
+	AC_CONFIG_COMMANDS(PRNG_FORTUNA_TEST, , PRNG_FORTUNA_TEST=$PRNG_FORTUNA_TEST)
+	AC_SUBST(PRNG_FORTUNA_TEST)
+fi
+
 # --with-kdc-kdb-update makes the KDC update the database with last request
 # information and failure information.
 
@@ -1101,8 +1126,12 @@ V5_AC_OUTPUT_MAKEFILE(.
 	lib/crypto/$CRYPTO_IMPL/hash_provider lib/crypto/krb/checksum
 	lib/crypto/krb/prf lib/crypto/krb/rand2key
 	lib/crypto/$CRYPTO_IMPL lib/crypto/$CRYPTO_IMPL/md4 lib/crypto/$CRYPTO_IMPL/md5
-	lib/crypto/krb/old lib/crypto/krb/raw lib/crypto/$CRYPTO_IMPL/sha1
-	lib/crypto/krb/arcfour lib/crypto/krb/yarrow lib/crypto/$CRYPTO_IMPL/aes
+	lib/crypto/krb/old lib/crypto/krb/raw
+        lib/crypto/$CRYPTO_IMPL/sha1
+        lib/crypto/$CRYPTO_IMPL/sha2
+	lib/crypto/krb/arcfour lib/crypto/krb/prng
+	lib/crypto/krb/prng/$PRNG_ALG
+	lib/crypto/$CRYPTO_IMPL/aes
 	lib/crypto/$CRYPTO_IMPL/camellia lib/crypto/crypto_tests
 
 	lib/krb5 lib/krb5/error_tables lib/krb5/asn.1 lib/krb5/ccache
