--- a/src/lib/crypto/openssl/Makefile.in
+++ b/src/lib/crypto/openssl/Makefile.in
@@ -1,11 +1,12 @@
 mydir=lib/crypto/openssl
 BUILDTOP=$(REL)..$(S)..$(S)..
-SUBDIRS=camellia des aes md4 md5  sha1 enc_provider hash_provider
+SUBDIRS=camellia des aes md4 md5  sha1 sha2 enc_provider hash_provider
 LOCALINCLUDES = -I$(srcdir)/../krb 			\
 		-I$(srcdir)/../krb/hash_provider 	\
 		-I$(srcdir)/des 	\
 		-I$(srcdir)/aes 	\
 		-I$(srcdir)/sha1 	\
+		-I$(srcdir)/sha2 	\
 		-I$(srcdir)/md4 	\
 		-I$(srcdir)/md5	\
 		-I$(srcdir)/enc_provider	\
@@ -36,14 +37,14 @@ SRCS=\
 	$(srcdir)/pbkdf2.c	
 
 STOBJLISTS= des/OBJS.ST md4/OBJS.ST 	\
-	md5/OBJS.ST sha1/OBJS.ST 	\
+	md5/OBJS.ST sha1/OBJS.ST sha2/OBJS.ST 	\
 	enc_provider/OBJS.ST 		\
 	hash_provider/OBJS.ST 		\
 	aes/OBJS.ST 			\
 	OBJS.ST
 
 SUBDIROBJLISTS= des/OBJS.ST md4/OBJS.ST 	\
-		md5/OBJS.ST sha1/OBJS.ST 	\
+		md5/OBJS.ST sha1/OBJS.ST sha2/OBJS.ST 	\
 		enc_provider/OBJS.ST 		\
 		hash_provider/OBJS.ST 		\
 		aes/OBJS.ST 
@@ -70,6 +71,9 @@ all-windows::
 	cd ..\sha1
 	@echo Making in crypto\sha1
 	$(MAKE) -$(MFLAGS)
+	cd ..\sha2
+	@echo Making in crypto\sha2
+	$(MAKE) -$(MFLAGS)
 	cd ..\hash_provider
 	@echo Making in crypto\hash_provider
 	$(MAKE) -$(MFLAGS)
@@ -93,6 +97,9 @@ clean-windows::
 	$(MAKE) -$(MFLAGS) clean
 	cd ..\sha1
 	@echo Making clean in crypto\sha1
+	$(MAKE) -$(MFLAGS) clean
+	cd ..\sha2
+	@echo Making clean in crypto\sha2
 	$(MAKE) -$(MFLAGS) clean
 	cd ..\hash_provider
 	@echo Making clean in crypto\hash_provider
