Fix the NSS PRNG build.  Fix the build for non-gmake make.  Revert a no longer necessary change to lib/crypto/krb/Makefile.in.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24427 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/krb/prng/nss/Makefile.in
+++ b/src/lib/crypto/krb/prng/nss/Makefile.in
@@ -1,7 +1,7 @@
 mydir=lib/crypto/krb/prng/nss
 BUILDTOP=$(REL)..$(S)..$(S)..$(S)..$(S)..
 LOCALINCLUDES = -I$(srcdir)/.. -I$(srcdir)/../.. \
-		-I$(srcdir)/../../../@CRYPTO_IMPL@
+		-I$(srcdir)/../../../@CRYPTO_IMPL@ @CRYPTO_IMPL_CFLAGS@
 DEFS=
 
 PROG_LIBPATH=-L$(TOPLIBD)
