Add RUN_SETUP so make check works by setting the proper LD_LIBRARY_PATH
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24428 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/krb/prng/fortuna/Makefile.in
+++ b/src/lib/crypto/krb/prng/fortuna/Makefile.in
@@ -6,7 +6,7 @@ LOCALINCLUDES = -I$(srcdir)/.. -I$(srcdir)/../.. \
 		-I$(srcdir)/../../../@CRYPTO_IMPL@/aes 	\
 		-I$(srcdir)/../../../@CRYPTO_IMPL@/enc_provider
 DEFS=
-
+RUN_SETUP = @KRB5_RUN_ENV@
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 
