ticket: 6807 subject: SecurID build support target_version: 1.9 tags: pullup
Integrate SecurID into the build if libaceclnt is found.
Add a README file with an example of how to build it.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24467 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/configure.in
+++ b/src/configure.in
@@ -1085,6 +1085,16 @@ else
 fi
 AC_SUBST(ldap_plugin_dir)
 AC_SUBST(LDAP)
+# This check is for plugins/preauth/securid_sam2
+sam2_plugin=""
+old_CFLAGS=$CFLAGS
+CFLAGS="$CFLAGS $PTHREAD_CFLAGS"
+AC_CHECK_LIB(aceclnt, sd_init,[
+		      AC_MSG_NOTICE([Enabling RSA securID support])
+		      sam2_plugin=plugins/preauth/securid_sam2
+		      ])
+AC_SUBST(sam2_plugin)
+CFLAGS=$old_CFLAGS
 
 # This checks is for plugins/locate/python, which isn't built by
 # default, so it's not a big deal that it isn't very good.  We should
