Make it possible to override CRYPTO_IMPL_CFLAGS and CRYPTO_IMPL_LIBS at make time.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24469 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/nss/hash_provider/Makefile.in
+++ b/src/lib/crypto/nss/hash_provider/Makefile.in
@@ -1,8 +1,9 @@
 mydir=lib/crypto/nss/hash_provider
 BUILDTOP=$(REL)..$(S)..$(S)..$(S)..
+CRYPTO_IMPL_CFLAGS=@CRYPTO_IMPL_CFLAGS@
 LOCALINCLUDES = -I$(srcdir)/../../krb/crc32 -I$(srcdir)/../md4 \
 	-I$(srcdir)/.. -I$(srcdir)/../../krb \
-	@CRYPTO_IMPL_CFLAGS@
+	$(CRYPTO_IMPL_CFLAGS)
 
 DEFS=
 
