--- a/src/lib/crypto/nss/Makefile.in
+++ b/src/lib/crypto/nss/Makefile.in
@@ -1,6 +1,7 @@
 mydir=lib/crypto/nss
 BUILDTOP=$(REL)..$(S)..$(S)..
 SUBDIRS=des aes	camellia md4 md5  sha1 sha2 enc_provider hash_provider
+CRYPTO_IMPL_CFLAGS=@CRYPTO_IMPL_CFLAGS@
 LOCALINCLUDES = -I$(srcdir)/../krb 			\
 		-I$(srcdir)/../krb/hash_provider 	\
 		-I$(srcdir)/des 	\
@@ -11,7 +12,7 @@ LOCALINCLUDES = -I$(srcdir)/../krb 			\
 		-I$(srcdir)/md5	\
 		-I$(srcdir)/enc_provider	\
 		-I$(srcdir)/hash_provider 	\
-		@CRYPTO_IMPL_CFLAGS@
+		$(CRYPTO_IMPL_CFLAGS)
 
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
