--- a/src/lib/crypto/nss/enc_provider/Makefile.in
+++ b/src/lib/crypto/nss/enc_provider/Makefile.in
@@ -1,12 +1,13 @@
 mydir=lib/crypto/nss/enc_provider
 BUILDTOP=$(REL)..$(S)..$(S)..$(S)..
+CRYPTO_IMPL_CFLAGS=@CRYPTO_IMPL_CFLAGS@
 LOCALINCLUDES = -I$(srcdir)/../des 	\
 		-I$(srcdir)/../arcfour \
 		-I$(srcdir)/../aes 	\
 		-I$(srcdir)/../../krb 			\
 		-I$(srcdir)/../../krb/rand2key	 	\
 		-I$(srcdir)/.. -I$(srcdir)/.  \
-		@CRYPTO_IMPL_CFLAGS@
+		$(CRYPTO_IMPL_CFLAGS)
 DEFS=
 
 ##DOS##BUILDTOP = ..\..\..\..
