On the camellia-cts-cmac branch, replace the Camellia CCM enctypes with enctypes using CTS and CMAC.
git-svn-id: svn://anonsvn.mit.edu/krb5/branches/camellia-cts-cmac@24514 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/builtin/enc_provider/Makefile.in
+++ b/src/lib/crypto/builtin/enc_provider/Makefile.in
@@ -21,20 +21,20 @@ STLIBOBJS= \
 	des3.o 	\
 	rc4.o 	\
 	aes.o   \
-	camellia_ctr.o
+	camellia.o
 
 OBJS= \
 	$(OUTPRE)des.$(OBJEXT) 	\
 	$(OUTPRE)des3.$(OBJEXT) 	\
 	$(OUTPRE)aes.$(OBJEXT) 	\
-	$(OUTPRE)camellia_ctr.$(OBJEXT)	\
+	$(OUTPRE)camellia.$(OBJEXT)	\
 	$(OUTPRE)rc4.$(OBJEXT)
 
 SRCS= \
 	$(srcdir)/des.c 	\
 	$(srcdir)/des3.c 	\
 	$(srcdir)/aes.c 	\
-	$(srcdir)/camellia_ctr.c\
+	$(srcdir)/camellia.c	\
 	$(srcdir)/rc4.c
 
 ##DOS##LIBOBJS = $(OBJS)
